# snippets

./: README.md  gencert  install-zk.sh  intermediate-ca.conf  nginx.conf  notes  pkt.py  process_text.py  root-ra.conf  sub.ini  tcpdump-1  test.txt  test2  test3  txt.py  vm.sh
algor-code-ex/.svn/: wc.db
algor-code-ex/practical_algor_code/: index.txt
c-snippet/: bin2h.c  corcpp.c  nomain.c  odd_array.c
c-snippet/.svn/: wc.db
clang-ex/: Makefile  and.c  array.c  atexit.c  bit_complete.c  bss.c  ctrl-c.c  foo.c  malloc0.c  memtest.c  microsoft.c  popcount.c  shift.c  sizeof.c  sizeofarray.c  str2mac.c  swap.c  typeof.c  volatile.c  weak.c  zero_array.c
clang-ex/foo/: asm.c  endian.c  gcc_optimise.c  helloworld.c  max.c
cs630-asm-lab/: .gitignore  Makefile  NOTE.md  README.md  qemu.sh
httpterm/: Makefile  client.c  httpterm.c
httpterm/include/: epoll.h  mini-clist.h
kernel-ex/Linux-Kernel-Study/: LICENSE  README.md
kernel-ex/case/: README.md
kernel-ex/module-ex/: Makefile  hello.c
kernel-lab/: Makefile  build  genramfs
kernel-lab/.svn/: wc.db
make-static-vim/.svn/: wc.db
makefile-ex/app/: GNUmakefile
makefile-ex/generic/: hello.c  make-for-c  makefile  simple.mk
makefile-ex/non-recursive-makefile/: README  makefile
openstack-ex/oslo/: README
openstack-ex/setup/: setup.py
openstack-ex/setuptools/ep/mypackage/: setup.cfg  setup.py
openstack-ex/setuptools/ep/mypackage/mypackage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python-code-ex/: cmd.py  config.py  simple-httpd
shell-ex/: centos7-init.sh  deplist  repo.sh
(+1651 files in other folders)
