[metadata]
name = mypackage 
version = 12.0.0
summary = Cloud computing fabric controller

[files]
packages =
    mypackage 

[entry_points]
mypackage.api.v1 = 
    databases = mypackage.api.v1.databases:main
    hello = mypackage.api.v1.hello:main

[wheel]
universal = 1

[pbr]
autodoc_index_modules = 0
warnerrors = true
